# vllm-windows

./: CLAUDE.md  CMakeLists.txt  README.md  fix_cuda_13_align.py  fix_cutlass_msvc.py  setup.py
benchmarks/embed_compare/: .gitignore  README.md  REPORT.md  chunking.py  embed_client.py  gen_data.py  make_report.py  requirements.txt  run_bench.py  serve_bge.bat  serve_voyage.bat
benchmarks/embed_compare/results/: by_config.csv  by_depth.csv  summary.json
cmake/external_projects/: qutlass.cmake  triton_kernels.cmake  vllm_flash_attn.cmake
csrc/: cumem_allocator.cpp  spinloop.cpp
csrc/attention/: dtype_fp8.cuh
csrc/core/: math.hpp
csrc/cpu/: cpu_types_vsx.hpp
csrc/libtorch_stable/: activation_kernels.cu  fused_qknorm_rope_kernel.cu  persistent_topk.cuh
csrc/libtorch_stable/attention/: merge_attn_states.cu
csrc/libtorch_stable/mamba/: selective_scan_fwd.cu
csrc/moe/: topk_softplus_sqrt_kernels.cu
csrc/moe/marlin_moe_wna16/: generate_kernels.py  ops.cu
csrc/quantization/: utils.cuh
csrc/quantization/marlin/: generate_kernels.py  marlin.cu
launch/: README.md  serve_bge_m3.ps1  serve_gemma.ps1
requirements/: common.txt  cuda.txt  windows.txt
rust/: AGENTS.md  Cargo.toml  README.md
rust/src/managed-engine/: Cargo.toml
rust/src/managed-engine/src/: process.rs
rust/src/server/: Cargo.toml
vllm/: collect_env.py  envs.py
vllm/benchmarks/: throughput.py
vllm/distributed/: parallel_state.py  utils.py
vllm/entrypoints/: grpc_server.py
vllm/entrypoints/cli/: launch.py  openai.py  serve.py
vllm/utils/: system_utils.py
vllm/v1/: utils.py
(+25 files in other folders)
